Fix alignment of main section

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,13 @@
 .main {
     border: solid 1px black;
     padding: 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+#process {
+    width: 72px;
+    align-self: center;
 }
 
 .words {
